try to fix select width on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
 
   .app {    
     margin: 20px;
+    max-width: 424px;
   }
 
   .submit-entry {
@@ -37,7 +38,7 @@ body {
   }
 
   .league-select {
-    width: 424px;
+    width: 100%;
     height: 25px;
   }
 
@@ -49,7 +50,7 @@ body {
     display: flex;
     flex-direction: row;
     height: 545px;
-    max-width: 424px;
+    /* max-width: 424px; */
   }
 
   .player-info {
